gen/androidmanagement/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-androidmanagement1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/androidmanagement/v1/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/androidmanagement/v1/lib/src/lib.rs:5455:44
     |
5455 |             wipe_data_flags: Option<crate::devices::params::DeleteWipeDataFlags>,
     |                                            ^^^^^^^
     |                                            |
     |                                            unresolved import
     |                                            help: a similar path exists: `crate::enterprises::devices`

error[E0433]: failed to resolve: unresolved import
    --> gen/androidmanagement/v1/lib/src/lib.rs:5472:31
     |
5472 |                 value: crate::devices::params::DeleteWipeDataFlags,
     |                               ^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::enterprises::devices`

error[E0423]: expected value, found struct `applications::ApplicationsActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4693:13
     |
4693 |             applications::ApplicationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `applications::ApplicationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `devices::DevicesActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4697:13
     |
4697 |             devices::DevicesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `devices::DevicesActions { /* fields */ }`?

error[E0423]: expected value, found struct `enrollment_tokens::EnrollmentTokensActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4701:13
     |
4701 |             enrollment_tokens::EnrollmentTokensActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `enrollment_tokens::EnrollmentTokensActions { /* fields */ }`?

error[E0423]: expected value, found struct `policies::PoliciesActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4705:13
     |
4705 |             policies::PoliciesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `policies::PoliciesActions { /* fields */ }`?

error[E0423]: expected value, found struct `web_apps::WebAppsActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4709:13
     |
4709 |             web_apps::WebAppsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `web_apps::WebAppsActions { /* fields */ }`?

error[E0423]: expected value, found struct `web_tokens::WebTokensActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:4713:13
     |
4713 |             web_tokens::WebTokensActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `web_tokens::WebTokensActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/androidmanagement/v1/lib/src/lib.rs:5447:17
     |
5447 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

warning: unreachable expression
   --> gen/androidmanagement/v1/lib/src/lib.rs:309:13
    |
309 | /             Ok(match value {
310 | |                 _ => {
311 | |                     return Err(::serde::de::Error::custom(format!(
312 | |                         "invalid enum for #name: {}",
...   |
315 | |                 }
316 | |             })
    | |______________^
    |
    = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
   --> gen/androidmanagement/v1/lib/src/lib.rs:832:13
    |
832 | /             Ok(match value {
833 | |                 _ => {
834 | |                     return Err(::serde::de::Error::custom(format!(
835 | |                         "invalid enum for #name: {}",
...   |
838 | |                 }
839 | |             })
    | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:1511:13
     |
1511 | /             Ok(match value {
1512 | |                 _ => {
1513 | |                     return Err(::serde::de::Error::custom(format!(
1514 | |                         "invalid enum for #name: {}",
...    |
1517 | |                 }
1518 | |             })
     | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:2922:13
     |
2922 | /             Ok(match value {
2923 | |                 _ => {
2924 | |                     return Err(::serde::de::Error::custom(format!(
2925 | |                         "invalid enum for #name: {}",
...    |
2928 | |                 }
2929 | |             })
     | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:3132:13
     |
3132 | /             Ok(match value {
3133 | |                 _ => {
3134 | |                     return Err(::serde::de::Error::custom(format!(
3135 | |                         "invalid enum for #name: {}",
...    |
3138 | |                 }
3139 | |             })
     | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:3276:13
     |
3276 | /             Ok(match value {
3277 | |                 _ => {
3278 | |                     return Err(::serde::de::Error::custom(format!(
3279 | |                         "invalid enum for #name: {}",
...    |
3282 | |                 }
3283 | |             })
     | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:4417:13
     |
4417 | /             Ok(match value {
4418 | |                 _ => {
4419 | |                     return Err(::serde::de::Error::custom(format!(
4420 | |                         "invalid enum for #name: {}",
...    |
4423 | |                 }
4424 | |             })
     | |______________^

warning: unreachable expression
    --> gen/androidmanagement/v1/lib/src/lib.rs:5320:21
     |
5320 | /                     Ok(match value {
5321 | |                         _ => {
5322 | |                             return Err(::serde::de::Error::custom(format!(
5323 | |                                 "invalid enum for #name: {}",
...    |
5326 | |                         }
5327 | |                     })
     | |______________________^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-androidmanagement1`.

To learn more, run the command again with --verbose.
